--- a/photomap-core-api/api-gateway/src/main/resources/application.yml
+++ b/photomap-core-api/api-gateway/src/main/resources/application.yml
@@ -67,10 +67,10 @@ logging:
     enabled:
       true
   level:
-    ua.in.photomap: DEBUG
-    org.springframework.cache: DEBUG
-    org.springframework.data.redis: DEBUG
-    org.springframework.cloud.gateway.filter: TRACE
+    ua.in.photomap: INFO
+    org.springframework.cache: INFO
+    org.springframework.data.redis: INFO
+    org.springframework.cloud.gateway.filter: INFO
 
 
 springdoc:
