--- a/photomap-core-api/api-gateway/src/main/resources/application.yml
+++ b/photomap-core-api/api-gateway/src/main/resources/application.yml
@@ -1,12 +1,28 @@
 server:
   port: 8081
 
+# Application specific configs
 photomap:
   security:
     secret: ${JWT_SECRET:photomap-secret}
   client:
     url: ${PHOTOMAP_CLIENT_URL:http://localhost:5173}
 
+# API Services configuration
+user-api:
+  host: ${USER_API_HOSTNAME:localhost}
+  port: ${USER_API_PORT:8082}
+photo-api:
+  host: ${PHOTO_API_HOSTNAME:localhost}
+  port: ${PHOTO_API_PORT:8083}
+geojson-generator:
+  host: ${GEOJSON_GENERATOR_HOSTNAME:localhost}
+  port: ${GEOJSON_GENERATOR_PORT:8088}
+notification-api:
+  host: ${NOTIFICATION_API_HOSTNAME:localhost}
+  port: ${NOTIFICATION_API_PORT:8084}
+
+# Spring configurations
 spring:
   cloud:
     gateway:
@@ -24,59 +40,44 @@ spring:
           '[/**]':
             allowedOrigins: ${photomap.client.url}
             allowedHeaders: "*"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
-              - PATCH
+            allowedMethods: [GET, POST, PUT, DELETE, OPTIONS, PATCH]
             allowCredentials: true
 
+  # Database configuration
   datasource:
     url: ${DATABASE_URL:jdbc:postgresql://localhost:5433/photomap}
     username: ${DATABASE_USERNAME:admin}
     password: ${DATABASE_PASSWORD:Password123}
 
+  # Redis configuration
   data:
     redis:
       host: ${REDIS_HOSTNAME:localhost}
       port: 6379
 
-user-api:
-  host: ${USER_API_HOSTNAME:localhost}
-  port: ${USER_API_PORT:8082}
-photo-api:
-  host: ${PHOTO_API_HOSTNAME:localhost}
-  port: ${PHOTO_API_PORT:8083}
-geojson-generator:
-  host: ${GEOJSON_GENERATOR_HOSTNAME:localhost}
-  port: ${GEOJSON_GENERATOR_PORT:8088}
-notification-api:
-  host: ${NOTIFICATION_API_HOSTNAME:localhost}
-  port: ${NOTIFICATION_API_PORT:8084}
-
+# Management endpoints
 management:
   endpoints:
     web:
       exposure:
-        include: health,liveness,readiness,info
+        include: [health, liveness, readiness, info]
   endpoint:
     health:
       probes:
         enabled: true
 
+# Logging configuration
 logging:
   filter:
-    enabled:
-      true
+    enabled: true
   level:
     ua.in.photomap: INFO
-    org.springframework.cache: INFO
-    org.springframework.data.redis: INFO
-    org.springframework.cloud.gateway.filter: INFO
+    org.springframework:
+      cache: INFO
+      data.redis: INFO
+      cloud.gateway.filter: INFO
 
-
+# API Documentation
 springdoc:
   api-docs:
     enabled: true
@@ -94,6 +95,8 @@ springdoc:
         name: notification-api
       - url: /doc/geojson-generator/v3/api-docs
         name: geojson-generator
+
+# Swagger security
 swagger:
   security:
     username: ${SWAGGER_USERNAME}
