--- a/photomap-core-api/api-gateway/build.gradle
+++ b/photomap-core-api/api-gateway/build.gradle
@@ -21,31 +21,41 @@ ext {
 }
 
 dependencies {
+	// Spring Cloud & Boot
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// Spring Security
 	implementation 'org.springframework.security:spring-security-core'
 	implementation 'org.springframework.security:spring-security-config'
 	implementation 'org.springframework.security:spring-security-web'
 
-	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-sql-postgresql:1.2.8.RELEASE'
-	implementation 'ua.in.photomap:photomap-common-cache:1.0.0'
+	// Database
+	implementation 'org.postgresql:postgresql:42.7.2'
 
-	implementation 'org.postgresql:postgresql:42.6.0'
+	// Authentication
 	implementation 'com.auth0:java-jwt:4.4.0'
 
-	implementation 'com.google.cloud:google-cloud-logging:3.15.17'
-	implementation 'com.google.cloud:google-cloud-logging-logback:0.131.4-alpha'
+	// Networking
 	implementation 'io.grpc:grpc-netty:1.62.2'
-
-	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
-
 	implementation 'io.projectreactor.netty:reactor-netty:1.1.18'
 
+	// Utils
+	implementation 'com.google.guava:guava:33.4.0-jre'
+
+	// Documentation
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
+
+	// Internal dependencies
+	implementation 'ua.in.photomap:photomap-common-cache:1.0.0'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok:1.18.28'
 	annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
