--- a/photomap-core-api/api-gateway-kt/build.gradle
+++ b/photomap-core-api/api-gateway-kt/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.jetbrains.kotlin.jvm' version '1.9.22'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.22'
 }
 
 group = 'ua.in.photomap'
@@ -21,6 +22,10 @@ ext {
 }
 
 dependencies {
+	// Kotlin
+	implementation 'org.jetbrains.kotlin:kotlin-reflect'
+	implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+
 	// Spring Cloud & Boot
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -42,9 +47,6 @@ dependencies {
 	implementation 'io.grpc:grpc-netty:1.62.2'
 	implementation 'io.projectreactor.netty:reactor-netty:1.1.18'
 
-	// Utils
-	implementation 'com.google.guava:guava:33.4.0-jre'
-
 	// Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
 
@@ -62,6 +64,13 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+	kotlinOptions {
+		freeCompilerArgs += '-Xjsr305=strict'
+		jvmTarget = '17'
 	}
 }
 
