--- a/photomap-core-api/api-gateway-kt/src/main/resources/application.yml
+++ b/photomap-core-api/api-gateway-kt/src/main/resources/application.yml
@@ -9,18 +9,19 @@ photomap:
     url: ${PHOTOMAP_CLIENT_URL:http://localhost:5173}
 
 # API Services configuration
-user-api:
-  host: ${USER_API_HOSTNAME:localhost}
-  port: ${USER_API_PORT:8082}
-photo-api:
-  host: ${PHOTO_API_HOSTNAME:localhost}
-  port: ${PHOTO_API_PORT:8083}
-geojson-generator:
-  host: ${GEOJSON_GENERATOR_HOSTNAME:localhost}
-  port: ${GEOJSON_GENERATOR_PORT:8088}
-notification-api:
-  host: ${NOTIFICATION_API_HOSTNAME:localhost}
-  port: ${NOTIFICATION_API_PORT:8084}
+api:
+  user:
+    host: ${USER_API_HOSTNAME:localhost}
+    port: ${USER_API_PORT:8082}
+  photo:
+    host: ${PHOTO_API_HOSTNAME:localhost}
+    port: ${PHOTO_API_PORT:8083}
+  geojson:
+    host: ${GEOJSON_GENERATOR_HOSTNAME:localhost}
+    port: ${GEOJSON_GENERATOR_PORT:8088}
+  notification:
+    host: ${NOTIFICATION_API_HOSTNAME:localhost}
+    port: ${NOTIFICATION_API_PORT:8084}
 
 # Spring configurations
 spring:
