--- a/photomap-core-api/docker/docker-compose.yaml
+++ b/photomap-core-api/docker/docker-compose.yaml
@@ -170,6 +170,7 @@ services:
       NOTIFICATION_API_HOSTNAME: notification-api
       PHOTOMAP_CLIENT_URL: ${PHOTOMAP_CLIENT_URL}
       JWT_SECRET: ${JWT_SECRET}
+      SWAGGER_USERNAME: ${SWAGGER_USERNAME}
       SWAGGER_PASSWORD: ${SWAGGER_PASSWORD}
     networks:
       - photomap
