Update project setup docs and scripts; add .env.template

--- a/photomap-core-api/.gitignore
+++ b/photomap-core-api/.gitignore
@@ -3,11 +3,8 @@
 /docker/.env.dev
 /docker/.env.prod
 /docker/mongo/mongodb-keyfile
-/docker/mongo/mongodb-keyfile.dev
-/docker/mongo/mongodb-keyfile.prod
-/google/credentials.json
-/google/credentials.dev.json
-/google/credentials.prod.json
+/docker/mongo/mongodb-keyfile.**
+/google/credentials.**
 /docker/postgres-db-init-script/init.sql
 /api-gateway/bin/
 /geojson-generator/bin/
