--- a/photomap-core-api/docker/docker-compose.yaml
+++ b/photomap-core-api/docker/docker-compose.yaml
@@ -165,7 +165,7 @@ services:
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
       REDIS_HOSTNAME: redis
       USER_API_HOSTNAME: user-api
-      PHOTO_API_HOSTNAME: photo-api
+      PHOTO_API_HOSTNAME: ${PHOTO_API_HOSTNAME}
       GEOJSON_GENERATOR_HOSTNAME: geojson-generator
       NOTIFICATION_API_HOSTNAME: notification-api
       PHOTOMAP_CLIENT_URL: ${PHOTOMAP_CLIENT_URL}
@@ -185,12 +185,14 @@ services:
 
   geojson-generator:
     image: geojson-generator:latest
+    ports:
+      - 8088:8088
     environment:
       KAFKA_HOSTNAME: kafka
       MONGO_HOSTNAME: mongo1
       MONGO_USERNAME: ${MONGO_PHOTOMAP_USERNAME}
       MONGO_PASSWORD: ${MONGO_PHOTOMAP_PASSWORD}
-      PHOTO_API_HOSTNAME: photo-api
+      PHOTO_API_HOSTNAME: ${PHOTO_API_HOSTNAME}
     networks:
       - photomap
     depends_on:
@@ -229,6 +231,8 @@ services:
 
   user-api:
     image: user-api:latest
+    ports:
+      - "8082:8082"
     environment:
       DATABASE_URL: ${DATABASE_URL}
       DATABASE_USERNAME: ${POSTGRES_USER}
